[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Main/MainView.gd" type="Script" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 319.0
margin_bottom = 537.0

[node name="StatusLabel" type="Control" parent="Control"]
margin_right = 320.0
margin_bottom = 40.0

[node name="TitleStatus" type="Label" parent="Control/StatusLabel"]
margin_right = 47.0
margin_bottom = 14.0
text = "Status: "

[node name="LabelText" type="Label" parent="Control/StatusLabel"]
margin_left = 45.0
margin_right = 85.0
margin_bottom = 14.0
text = "*"

[node name="ConnectControl" type="Control" parent="Control"]
margin_top = 72.0
margin_right = 320.0
margin_bottom = 112.0

[node name="Label" type="Label" parent="Control/ConnectControl"]
margin_right = 315.0
margin_bottom = 14.0
text = "Localhost Server URL"
align = 1

[node name="InputText" type="TextEdit" parent="Control/ConnectControl"]
margin_left = 1.0
margin_top = 27.0
margin_right = 319.0
margin_bottom = 53.0

[node name="ConnectButton" type="Button" parent="Control/ConnectControl"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 20.0
margin_right = -1.0
margin_bottom = 75.0
text = "Connect"

[node name="ShootButton" type="Button" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -341.0
text = "SHOOT!"

[connection signal="pressed" from="Control/ConnectControl/ConnectButton" to="." method="_on_ConnectButton_pressed"]
[connection signal="pressed" from="Control/ShootButton" to="." method="_on_ShootButton_pressed"]
